# sdl-helper-cpp

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  SDL-helper.h  build-and-run-linux-cmake.sh  build-and-run-linux-g++.sh  main.cpp
